--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,75 +1,61 @@
 pipeline {
-    agent any
-    
-    stages {
-        stage('Build') {
-            steps {
-                echo 'Building the code...'
-                echo 'Using Maven for build automation.'
-                // Maven is a common build automation tool for Java projects.
-            }
-        }
-        
-        stage('Unit and Integration Tests') {
-            steps {
-                echo 'Running unit tests and integration tests...'
-                echo 'Using JUnit for unit testing and Selenium for integration testing.'
-                // JUnit is a popular unit testing framework for Java.
-                // Selenium is a widely used tool for web application testing.
-            }
-        }
-        
-        stage('Code Analysis') {
-            steps {
-                echo 'Analyzing code for quality and standards compliance...'
-                echo 'Using SonarQube for code analysis.'
-                // SonarQube is a tool for continuous inspection of code quality.
-            }
-        }
-        
-        stage('Security Scan') {
-            steps {
-                echo 'Performing security scan on the code...'
-                echo 'Using OWASP ZAP for security scanning.'
-                // OWASP ZAP (Zed Attack Proxy) is a tool for finding vulnerabilities in web applications.
-            }
-        }
-        
-        stage('Deploy to Staging') {
-            steps {
-                echo 'Deploying the application to staging server...'
-                echo 'Using SSH to deploy to AWS EC2 instance.'
-                // SSH can be used to securely deploy the application to a staging environment.
-            }
-        }
-        
-        stage('Integration Tests on Staging') {
-            steps {
-                echo 'Running integration tests on staging environment...'
-                echo 'Using Docker for setting up a production-like environment.'
-                // Docker can be used to set up a containerized staging environment for integration testing.
-            }
-        }
-        
-        stage('Deploy to Production') {
-            steps {
-                echo 'Deploying the application to production server...'
-                echo 'Using Ansible for automated deployment.'
-                // Ansible is a tool for automating deployment and configuration management.
-            }
-        }
-    }
-    
-    post {
-    success {
-        emailext subject: "Pipeline Success Notification",
-                 body: "Pipeline execution successful. Check logs for details.",
-                 to: "indrajapolkampalli@gmail.com"
-    }
-    failure {
-        emailext subject: "Pipeline Failure Notification",
-                 body: "Pipeline execution failed. Check logs for details.",
-                 to: "indrajapolkampalli@gmail.com"
-    }
+agent any
+stages {
+stage('Build') {
+steps {
+echo 'Building the code in jenkins pipeline...'
+// Tool: Maven
 }
-
+}
+stage('Unit and Integration Tests') {
+steps {
+echo 'Running unit tests...'
+// Tool: JUnit
+echo 'Running integration tests...'
+// Tool: Selenium
+}
+}
+stage('Code Analysis') {
+steps {
+echo 'Running code analysis...'
+// Tool: SonarQube
+}
+}
+stage('Security Scan') {
+steps {
+echo 'Performing security scan...'
+// Tool: OWASP ZAP
+}
+}
+stage('Deploy to Staging') {
+steps {
+echo 'Deploying to staging server...'
+// Tool: AWS CLI
+}
+}
+stage('Integration Tests on Staging') {
+steps {
+echo 'Running integration tests on staging...'
+// Tool: Postman
+}
+}
+stage('Deploy to Production') {
+steps {
+echo 'Deploying to production server...'
+// Tool: AWS CLI
+}
+}
+}
+post {
+success {
+mail to: "indrajapolkampalli@gmail.com",
+subject: "Build Status Email",
+body: "Successfull Build!"
+}
+failure {
+mail to: "indrajapolkampalli@gmail.com",
+subject: "Build Status Email",
+body: "Failure in Build!"
+}
+}
+}
